# Spectracer

./: .gitignore  LICENSE  README.md  clear_cache.ps1  main.py  pyproject.toml  requirements.txt  soundfonts
.limcode/design/: midi-grid-timeline.md  midi-overlay-editing.md
config/: analysis.default.toml
src/spectracer/: __init__.py  __main__.py  cli.py
src/spectracer/app/: __init__.py  analysis_sidecar_workflow.py  analysis_workflow.py
src/spectracer/audio/: __init__.py  channel_modes.py  io.py  playback.py
src/spectracer/core/: __init__.py  analysis_results.py  config.py  harmonics.py  models.py  pitch.py
src/spectracer/dsp/: __init__.py  colormap.py  cqt_engine.py  processing.py  tempo_analysis.py  visualization.py
src/spectracer/midi/: __init__.py  commands.py  editor_model.py  exporter.py  gm.py  grid.py  playback_controller.py  session.py  synth.py
src/spectracer/project/: __init__.py  cache_store.py  project_service.py
tests/: conftest.py  test_analysis_options_dialog.py  test_analysis_results.py  test_analysis_sidecar_workflow.py  test_analyze_workflow.py  test_cache_store.py  test_cli.py  test_config.py  test_event_track_widget.py  test_main_window.py  test_main_window_midi_editor_ui.py  test_midi_command_stack.py  test_midi_editor_interaction.py  test_midi_editor_model.py  test_midi_exporter.py  test_midi_grid.py  test_midi_note_overlay.py  test_midi_playback_controller.py  test_midi_session.py  test_midi_synth.py  test_models.py  test_spectrogram_view_midi_overlay.py  test_tempo_analysis.py  test_tempo_analysis_dialog.py  test_visualization.py
(+23 files in other folders)
