[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectracer"
version = "0.1.0"
description = "Modern spectrum analyzer and transcription assistant inspired by Wavetone"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "librosa>=0.10.2.post1",
    "soundfile>=0.12.1",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
ui = [
    "PyQt6>=6.7.1",
    "pyqtgraph>=0.13.7",
]
midi = [
    "mido>=1.3.2",
    "python-rtmidi>=1.5.8",
    "pyfluidsynth>=1.3.4",
]
audiofx = [
    "pedalboard>=0.9.16",
    "pyrubberband>=0.3.0",
    "scipy>=1.12.0",
]
dev = [
    "pytest>=8.3.2",
    "ruff>=0.6.4",
    "mypy>=1.11.2",
]

[project.scripts]
spectracer = "spectracer.cli:main"
spectracer-benchmark = "spectracer.tools.benchmark:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
